fix: 프로젝트 overflow:hidden 삭제 (DASOMEFE-25)

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -92,8 +92,6 @@
   }
   body {
     @apply font-sans antialiased bg-background text-foreground;
-    overflow: hidden;
-    position: fixed;
     width: 100%;
   }
 }
